content/_generated-doc/2.7/config/quarkus-elytron-security-config-group-mp-realm-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded-embedded-realm-configuration]]link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded-embedded-realm-configuration[Embedded Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded.realm-name]]`link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded.realm-name[quarkus.security.users.embedded.realm-name]`

[.description]
--
The realm name. This is used when generating a hashed password
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded.enabled]]`link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus.security.users.embedded.enabled[quarkus.security.users.embedded.enabled]`

[.description]
--
Determine whether security via the embedded realm is enabled.
--|boolean 
|`false`

|===