content/_generated-doc/3.2/config/quarkus-elytron-security-config-group-mp-realm-config.adoc

:summaryTableId: quarkus-elytron-security-config-group-mp-realm-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-embedded-realm-configuration]]link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-embedded-realm-configuration[Embedded Realm Configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-realm-name]]`link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-realm-name[quarkus.security.users.embedded.realm-name]`


[.description]
--
The realm name. This is used when generating a hashed password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_REALM_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_REALM_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-enabled]]`link:#quarkus-elytron-security-config-group-mp-realm-config_quarkus-security-users-embedded-enabled[quarkus.security.users.embedded.enabled]`


[.description]
--
Determine whether security via the embedded realm is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===